--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "nodemon": "^2.0.15"
   }
 }
