--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,19 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/elbandingo/memestagram.git"
+    "url": "git+https://github.com/AhmedAlkh/memestagram.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/elbandingo/memestagram/issues"
+    "url": "https://github.com/AhmedAlkh/memestagram/issues"
   },
-  "homepage": "https://github.com/elbandingo/memestagram#readme",
+  "homepage": "https://github.com/AhmedAlkh/memestagram#readme",
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
